--- a/.github/workflows/package-apks.yml
+++ b/.github/workflows/package-apks.yml
@@ -40,7 +40,10 @@ jobs:
       VERSIONS: ${{ needs.discover-versions.outputs.versions }}
     outputs:
       packaging_required: ${{ steps.find.outputs.packaging_required }}
-      sha512: ${{ steps.find.outputs.sha512 }}
+      amd64_filename: ${{ steps.find.outputs.amd64_filename }}
+      arm64_filename: ${{ steps.find.outputs.arm64_filename }}
+      amd64_sha512: ${{ steps.find.outputs.amd64_sha512 }}
+      arm64_sha512: ${{ steps.find.outputs.arm64_sha512 }}
     steps:
 
       - name: Checkout
@@ -53,17 +56,22 @@ jobs:
         run: |
           for VERSION in ${VERSIONS[@]}; do \
             BASE_APK_FILENAME="./apk/amd64/${VERSION}/glibc-${VERSION}.apk"; \
-            GLIBC_TARBALL="./glibc/glibc-bin-${VERSION}-x86_64.tar.gz"; \
             if [ -f "${BASE_APK_FILENAME}" ]; then \
               echo "Version ${VERSION} already exists in ${BASE_APK_FILENAME}"; \
             else \
-              SHA512=$(cat glibc-versions.yml | yq '(.versions[] | select(.glibcVersion == "'"${VERSION}"'") | .amd64sha512sum)'); \
-              echo "Version ${VERSION} with sha512sum '${SHA512}' has not been packaged yet" && \
-              if [ ! -f "${GLIBC_TARBALL}" ]; then \
-                echo "Source ${GLIBC_TARBALL} is not available - bombing out here until compile-glibc workflows have all been resolved and PRs merged" && false
+              echo "Version ${VERSION} has not been packaged yet" && \
+              AMD64_FILENAME="./glibc/glibc-bin-${VERSION}-x86_64.tar.gz"; \
+              ARM64_FILENAME="./glibc/glibc-bin-${VERSION}-aarch64.tar.gz"; \
+              AMD64_SHA512=$(cat glibc-versions.yml | yq '(.versions[] | select(.glibcVersion == "'"${VERSION}"'") | .amd64sha512sum)'); \
+              ARM64_SHA512=$(cat glibc-versions.yml | yq '(.versions[] | select(.glibcVersion == "'"${VERSION}"'") | .arm64sha512sum)'); \
+              if [ ! -f "${AMD64_FILENAME}" ] || [ ! -f "${ARM64_FILENAME}" ]; then \
+                echo "Missing either ${AMD64_FILENAME} or ${ARM64_FILENAME} - bombing out here until compile-glibc workflows have all been resolved and PRs merged" && false
               fi
               echo "packaging_required=${VERSION}" > ${GITHUB_OUTPUT} && \
-              echo "sha512=${SHA512}" >> ${GITHUB_OUTPUT} && \
+              echo "amd64_filename=${AMD64_FILENAME}" >> ${GITHUB_OUTPUT} && \
+              echo "arm64_filename=${ARM64_FILENAME}" >> ${GITHUB_OUTPUT} && \
+              echo "amd64_sha512=${AMD64_SHA512}" >> ${GITHUB_OUTPUT} && \
+              echo "arm64_sha512=${ARM64_SHA512}" >> ${GITHUB_OUTPUT} && \
               break; \
             fi; \
           done
@@ -73,13 +81,29 @@ jobs:
     needs: find-unpackaged-version
     if: needs.find-unpackaged-version.outputs.packaging_required != ''
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          - arch: x86_64
+            targetarch: amd64
+            libfile: ld-linux-x86-64.so.2
+            filename: ${{ needs.find-unpackaged-version.outputs.amd64_filename }}
+            sha512: ${{ needs.find-unpackaged-version.outputs.amd64_sha512 }}
+          - arch: aarch64
+            targetarch: arm64
+            libfile: ld-linux-aarch64.so.1
+            filename: ${{ needs.find-unpackaged-version.outputs.arm64_filename }}
+            sha512: ${{ needs.find-unpackaged-version.outputs.arm64_sha512 }}
     permissions:
       contents: write
       pull-requests: write
     env:
       VERSION: ${{ needs.find-unpackaged-version.outputs.packaging_required }}
-      FILENAME: glibc/glibc-bin-${{ needs.find-unpackaged-version.outputs.packaging_required }}-x86_64.tar.gz
-      SHA512: ${{ needs.find-unpackaged-version.outputs.sha512 }}
+      ARCH: ${{ matrix.arch }}
+      TARGETARCH: ${{ matrix.targetarch }}
+      FILENAME: ${{ matrix.filename }}
+      SHA512: ${{ matrix.sha512 }}
+      LIBFILE: ${{ matrix.libfile }}
     steps:
 
       - name: Checkout
@@ -87,16 +111,14 @@ jobs:
         with:
           lfs: true
 
-      - name: Ensure output directories are present; add dummy apk file for arm64
+      - name: Ensure output directory is present
         run: |
-          mkdir -p apk/amd64/${VERSION}
-          mkdir -p apk/arm64/${VERSION}
-          touch apk/arm64/${VERSION}/glibc-dummy-${VERSION}.apk
+          mkdir -p apk/${TARGETARCH}/${VERSION}
 
       - name: Template APKBUILD for the version we're operating on
         run: |
           cp -v APKBUILD.tmpl APKBUILD
-          sed -i.bak -e "s/<<TARGETARCH>>/x86_64/g" APKBUILD
+          sed -i.bak -e "s/<<ARCH>>/${ARCH}/g" APKBUILD
           sed -i.bak -e "s/<<VERSION>>/${VERSION}/g" APKBUILD
           sed -i.bak -e "s/<<SHA512SUM>>/${SHA512}/g" APKBUILD
           rm APKBUILD.bak
@@ -123,9 +145,18 @@ jobs:
           docker create --name output --volume /packages alpine:3.23 /bin/true
           docker cp alpine-packaging-rsa.pub output:/packages/
 
+      - name: Set up QEMU
+        if: matrix.targetarch == 'arm64'
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Docker Buildx
+        if: matrix.targetarch == 'arm64'
+        uses: docker/setup-buildx-action@v3
+
       - name: Build Alpine packages
         run: |
           docker run --rm \
+            --platform linux/${TARGETARCH} \
             --env PACKAGER_PRIVKEY='/home/builder/.abuild/alpine-packaging-rsa' \
             --volumes-from input \
             --volumes-from output \
@@ -145,8 +176,8 @@ jobs:
 
       - name: Move built packages into their final locations; git add
         env:
-          PACKAGE_BUILD_OUTPUT_DIR: packages/builder/x86_64
-          LOCAL_APK_DIR: apk/amd64/${{ env.VERSION }}
+          PACKAGE_BUILD_OUTPUT_DIR: packages/builder/${{ env.ARCH }}
+          LOCAL_APK_DIR: apk/${{ env.TARGETARCH }}/${{ env.VERSION }}
           PACKAGE_BUILD_VERSION: ${{ env.VERSION }}-r0
         run: |
           ls -l ${PACKAGE_BUILD_OUTPUT_DIR}/
@@ -155,27 +186,28 @@ jobs:
           mv ${PACKAGE_BUILD_OUTPUT_DIR}/glibc-i18n-${PACKAGE_BUILD_VERSION}.apk ${LOCAL_APK_DIR}/glibc-i18n-${VERSION}.apk
           ls -l ${LOCAL_APK_DIR}
           rm -rf packages
-          git add apk/amd64/${VERSION}/glibc*-${VERSION}.apk apk/arm64/${VERSION}/glibc-dummy-${VERSION}.apk
+          git add apk/${TARGETARCH}/${VERSION}/glibc*-${VERSION}.apk
           git status
           git diff --cached
 
       - name: Test APK installation, including signature validation
         run: |
           docker run --rm \
+            --platform linux/${TARGETARCH} \
             --volume "${{ github.workspace }}/alpine-packaging-rsa.pub:/etc/apk/keys/alpine-packaging-rsa.pub" \
-            --volume "${{ github.workspace }}/apk/amd64/${VERSION}:/packages" \
+            --volume "${{ github.workspace }}/apk/${TARGETARCH}/${VERSION}:/packages" \
             alpine:3.23 \
-            sh -c 'apk -U add --no-progress --upgrade /packages/*.apk && ls -l /usr/glibc-compat/lib && ls -l /lib64 && ls -l /lib64/ld-linux-x86-64.so.2 | grep glibc'; \
+            sh -c 'apk -U add --no-progress --upgrade /packages/*.apk && ls -l /usr/glibc-compat/lib && ls -l /lib64 && ls -l /lib64/${LIBFILE} | grep glibc'; \
 
       - name: Submit new APKs via PR
         uses: peter-evans/create-pull-request@v6
         with:
-          title: "Add APKs for glibc ${{ env.VERSION }}, packaged and signed by Github Actions"
-          branch: "autogenerated-apks-for-glibc-${{ env.VERSION }}"
+          title: "Add APKs for ${{ env.TARGETARCH }} glibc ${{ env.VERSION }}, packaged and signed by Github Actions"
+          branch: "autogenerated-apks-for-${{ env.TARGETARCH }}-glibc-${{ env.VERSION }}"
           body: |
-            Automated PR to add the binary APK packages for glibc version ${{ env.VERSION }}.
+            Automated PR to add the binary APK packages for ${{ env.TARGETARCH }} glibc version ${{ env.VERSION }}.
           labels: automated
-          commit-message: "Add APKs for glibc ${{ env.VERSION }}, packaged and signed by Github Actions"
+          commit-message: "Add APKs for ${{ env.TARGETARCH }} glibc ${{ env.VERSION }}, packaged and signed by Github Actions"
 
 
   verify-apk-installations:
@@ -184,8 +216,17 @@ jobs:
       - find-unpackaged-version
     if: needs.find-unpackaged-version.outputs.packaging_required == ''
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        include:
+          - targetarch: amd64
+            libfile: ld-linux-x86-64.so.2
+          - targetarch: arm64
+            libfile: ld-linux-aarch64.so.1
     env:
       VERSIONS: ${{ needs.discover-versions.outputs.versions }}
+      TARGETARCH: ${{ matrix.targetarch }}
+      LIBFILE: ${{ matrix.libfile }}
     steps:
 
       - name: Checkout
@@ -197,10 +238,11 @@ jobs:
         run: |
           for VERSION in ${VERSIONS[@]}; do \
             docker run --rm \
+              --platform linux/${TARGETARCH} \
               --volume "${{ github.workspace }}/alpine-packaging-rsa.pub:/etc/apk/keys/alpine-packaging-rsa.pub" \
-              --volume "${{ github.workspace }}/apk/amd64/${VERSION}:/packages" \
+              --volume "${{ github.workspace }}/apk/${TARGETARCH}/${VERSION}:/packages" \
               alpine:3.23 \
-              sh -c 'apk -U add --no-progress --upgrade /packages/*.apk && ls -l /usr/glibc-compat/lib && ls -l /lib64 && ls -l /lib64/ld-linux-x86-64.so.2 | grep glibc'; \
+              sh -c 'apk -U add --no-progress --upgrade /packages/*.apk && ls -l /usr/glibc-compat/lib && ls -l /lib64 && ls -l /lib64/${LIBFILE} | grep glibc'; \
           done
 
 
@@ -234,6 +276,7 @@ jobs:
           name: "${{ matrix.version }}-r0"
           body: |
             Version ${{ matrix.version }} of the GNU C library, glibc.
+          # TODO: multi-architecture this little lot
           files: |
             apk/amd64/${{ matrix.version }}/glibc*-${{ matrix.version }}.apk
           token: ${{ secrets.GITHUB_TOKEN }}
